--- a/clubs/templates/clubs/show_team.html
+++ b/clubs/templates/clubs/show_team.html
@@ -52,7 +52,7 @@
 
 <section id="team" class="team">
     <div class="container">
-        <div>
+        <div class="row">
             <h1 class="float-left"> {{ team.name }}   </h1>
             
             <small> {% if editablexxx %}
