--- a/marketplace/templates/marketplace/announcement.html
+++ b/marketplace/templates/marketplace/announcement.html
@@ -60,6 +60,10 @@
 
         <div class="card-text text-center col-md-12">
             <span class="card-text">
+                <small class="text-muted"><a href="{{ object.www }}">{{ object.wwww }}</a> </small>
+            </span>
+
+            <span class="card-text">
                 <i class="icofont-list"></i>
                 <small class="text-muted"> {{ object.subscribers.count }} odpowiedzi </small>
             </span>
