--- a/profiles/templates/profiles/modals/_add_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_add_announcement_modal.html
@@ -19,10 +19,11 @@
 
 
             {% if user.announcementuserquota.left <= 0 %}
-                Wykorzystałeś cały swój plan na oddawanie ogłoszeń w tym sezonie. 
+
+                Wykorzystałeś cały plan na dodawanie ogłoszeń w tej rundzie
                 <br><br>
-                Jeśli jesteś zainteresowaniem rozszerzeniem pakietu: <br>
-                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">zwiększ limit tutaj</a>
+                Rozszerz pakiet klikając:<br>
+                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">Zwiększ limit</a>
          
             {% else %}
 
