--- a/clubs/templates/clubs/show_club.html
+++ b/clubs/templates/clubs/show_club.html
@@ -12,7 +12,7 @@
 {% block content %}
 <section id="clubs" class="club">
     <div class="container">
-        <div>
+        <div class="row">
             <h1 class="float-left"> {{ club.name|upper }}  </h1>
             <small> 
                 {% if editable %}
