--- a/profiles/templates/profiles/requests.html
+++ b/profiles/templates/profiles/requests.html
@@ -47,7 +47,6 @@
                                 <div class="col-9 col-md-3">
                                     {% inquiry_display_name object %}
                                 </div>
-
                                 <div class="d-md-none pull-right"> 
                                     {% if object.sender != user %}
                                         {% profile_link object.sender checks=False text='profil' %}
@@ -56,49 +55,65 @@
                                     {% endif %}
                                 </div>
 
-                                
-                                <div class="col-12 col-md-3"> 
-                                    {% if object.sender != user %}
-                                        {{ object.sender.display_club }}
-                                    {% else %}
-                                        {{ object.recipient.display_club }}
-                                    {% endif %}
-                                </div>
 
-                                <div class="d-none d-md-inline col-md">
+          
+
+                                {% if object.sender != user %}
+                                <div class="col-6 col-md-2">
+                                    {% if object.sender.is_club %}
+                                        <small class="text-muted">{{ object.sender.profile.get_club_role_display }}</small>
+                                    
+                                        {{ object.sender.get_full_name }}
+                                    {% endif %}  
+                                    
+                                </div>
+                                {% endif %}
+
+                                <div class="d-none d-md-inline col-md-2">
                                      {% include 'inquiries/partials/status.html' with object=object%}    
                                 </div>
 
-                                <div class="col-12 col-md-3"> 
+                                <div class="col-6 col-md-2"> 
+                                   
                                     {% if object.sender != user %}
+                                        {% if object.body %}
+                                        <small class="text-muted"> Kontakt:</small>
+                                        {% endif %}
                                         {{ object.body|default:''  }}
                                     {% else %}
+                                        {% if object.body_recipient %}
+                                         <small class="text-muted"> Kontakt:</small>
+                                        {% endif %}
                                         {{ object.body_recipient|default:''  }}
                                     {% endif %}
                                 </div>
 
-                                <div class="col-3 col-md"> 
+                                <div class="d-none d-md-inline col-md-1"> 
                                     {{ object.created_at|date:'Y-m-d H:i'  }}
                                 </div>
 
-                                {% if tab.actions %}
-                                <div class="d-none d-md-inline col-md">
-                                    <span class="float-right"> 
-                                        {% if object.is_active %}
-                                            {% update_request_button object accept=True %}
-                                            {% update_request_button object accept=False %}
-                                        {% endif %}
-                                    </span>
-
+                               
+                                <div class="d-none d-md-inline col-md-2">
+                                   {% if tab.actions and object.is_active %}
+                                    {% update_request_button object accept=True %}
+ 
+                                    {% update_request_button object accept=False %}
+                                 {% endif %}
                                 </div>
-                                {% endif %}
+                                
                             </div>
                         </div>
                        
 <!--   mobile       --> <div class="card-footer d-md-none">
+                            <span class="float-left"> 
+                                <small class="text-muted">{{ object.created_at|date:'Y-m-d H:i'  }}</small>
+                            </span>
                             <span class="float-right"> 
+                             
                                 {% include 'inquiries/partials/status.html' with object=object%}
-                                
+                                    
+                                  
+                               
                                 {% if object.is_active and tab.actions %}
                                     {% update_request_button object accept=True %}
                                     {% update_request_button object accept=False %}
